table dark mode :) fixed!

--- a/descover.css
+++ b/descover.css
@@ -81,8 +81,16 @@ body {
 .comp-table-container {
   padding: 0.5em;
   border: 0.1em solid rgb(200, 200, 200);
+  background-color: rgba(64, 62, 62, 0.9);
+  border-radius: 0.5em;
+  color: white;
+}
+.light-mode .comp-table-container {
+  padding: 0.5em;
+  border: 0.1em solid rgb(200, 200, 200);
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 0.5em;
+  color: black;
 }
 .comp-table {
   border-collapse: collapse;
