--- a/style.css
+++ b/style.css
@@ -540,6 +540,8 @@ body.light-mode .video-bg:before {
 .content-section-title {
   color: var(--content-title-color);
   margin-bottom: 14px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .content-section ul {
   display: flex;
@@ -824,6 +826,8 @@ body.light-mode .video-bg:before {
   border-radius: 14px;
   border: 1px solid var(--theme-bg-color);
   padding: 20px;
+  margin-top: 3%;
+  margin-left: auto;
   cursor: pointer;
   transition: 0.3s ease;
 }
